Added logic to support POST, COMMENT and TRUST actions
